[58353] fix: magicline z-index over dialog window

--- a/src/main/webapp/admin/webpages/page-builder/style/sass/_library.scss
+++ b/src/main/webapp/admin/webpages/page-builder/style/sass/_library.scss
@@ -16,7 +16,10 @@
     overflow: hidden;
     box-shadow: $modal-box-shadow;
 
-    transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out, left 0.4s ease-in-out;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+
+    transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
 
     &__header {
         position: relative;
@@ -80,11 +83,8 @@
     &__content {
         padding:0;
         width: 100%;
-        max-height: 60vh;
 
         overflow-y: scroll;
-        height: 100%;
-        max-height: 85%;
         background-color: $modal-body-background;
         backdrop-filter: $modal-body-filter;
 
