--- a/src/main/webapp/admin/webpages/page-builder/style/style.css
+++ b/src/main/webapp/admin/webpages/page-builder/style/style.css
@@ -1359,7 +1359,9 @@
   border-radius: 6px;
   overflow: hidden;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.9);
-  transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out, left 0.4s ease-in-out;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
 }
 .pb-library__header {
   position: relative;
@@ -1414,10 +1416,7 @@
 .pb-library__content {
   padding: 0;
   width: 100%;
-  max-height: 60vh;
   overflow-y: scroll;
-  height: 100%;
-  max-height: 85%;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(12px);
 }
